objects/SLP_CommunityContributor__c.object
<CustomObject>
    <fields>
        <fullName>Community_Id__c</fullName>
        <label>Community_Id</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>SLP_CommunityContributors</relationshipLabel>
        <relationshipName>SLP_CommunityContributors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_MailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_MailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User_Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SLP_CommunityContributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SLP_CommunityContributor</label>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>SLP_CommunityContributor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLP_CommunityContributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>